--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,146 @@
+:root{
+  --card-radius: 20px;
+}
+
+body{
+  padding: 0;
+  margin: 0;
+  font-family: 'Red Hat Display', sans-serif;
+  font-size: 16px;
+}
+
 .order-summary {
-  background-color: aqua;
+  width: 100%;
+  height: 100vh;
+  background-image: url('../assets/images/pattern-background-mobile.svg');
+  background-color: hsl(225, 100%, 94%);
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &__card-container {
+    margin: 0 25px;
+    max-width: 450px;
+    max-height: 600px;
+    width: 100%;
+    height: 100%;
+    background: white;
+    border-radius: var(--card-radius);
+  }
+  &__image {
+    width: 100%;
+    border-radius: var(--card-radius) var(--card-radius) 0 0;
+  }
+  &__title {
+    margin-top: 28px;
+    text-align: center;
+    font-weight: 700;
+    color: hsl(223, 47%, 23%);
+    font-size: 24px;
+  }
+  &__description {
+    text-align: center;
+    color: hsl(224, 23%, 55%);
+    margin: 0 calc((100% - 270px) / 2);
+  }
+  &__plan-section {
+    margin: 25px;
+    display: grid;
+    grid-template-columns: 1.2fr 2fr 1.2fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    background-color: hsl(225, 100%, 98%);
+    border-radius: 10px;
+    * {
+      font-size: 14px;
+    }
+  }
+  &__plan-image {
+    margin: 20px 0;
+    justify-self: center;
+  }
+  &__plan-info {
+    margin: 20px 0 20px;
+    > * {
+      margin: 0;
+    }
+  }
+  &__plan-price {
+    color: hsl(224, 23%, 55%);
+  }
+  &__plan-link {
+    color: hsl(245, 75%, 52%);
+    font-weight: 700;
+  }
+  &__actions {
+    display: flex;
+    flex-direction: column;
+  }
+  &__button {
+    all: unset;
+    margin: 25px;
+    color: hsl(224, 23%, 55%);
+    background-color: transparent;
+    font-weight: 700;
+    font-size: 17px;
+    border: none;
+    text-align: center;
+    &--primary {
+      all: unset;
+      text-align: center;
+      margin: 0 25px;
+      padding: 16px;
+      background-color: hsl(245, 75%, 52%);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-weight: 700;
+      font-size: 17px;
+      box-shadow: 0px 15px 20px hsla(245, 75%, 52%, 0.26);
+    }
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .order-summary {
+    background-image: url('../assets/images/pattern-background-desktop.svg');
+    &__card-container {
+      max-height: 700px;
+    }
+    &__title {
+      font-size: 28px;
+      margin-top: 46px;
+    }
+    &__plan-section {
+      margin: 20px 48px;
+    }
+    &__description {
+      text-align: center;
+      color: hsl(224, 23%, 55%);
+      margin: 0 48px;
+    }
+    &__plan-link {
+      &:hover{
+        text-decoration: none;
+        color: hsla(245, 75%, 52%, 0.664);
+      }
+    }
+    &__button {
+      cursor: pointer;
+      font-size: 14px;
+      margin: 15px 48px;
+      &:hover{
+        color: hsl(223, 47%, 23%);
+      }
+      &--primary{
+        cursor: pointer;
+        font-size: 14px;
+        margin: 15px 48px;
+        &:hover {
+          background-color: hsla(245, 75%, 52%, 0.664);
+        }
+      }
+    }
+  }
 }
